* Mon Dec 10 2016 Nick Miller <nick.miller@onyxpoint.com> - 7.1.0-0
- Updated assets and versions
- Converted to puppet-strings
- Switched to the new catalyst pattern with simplib::lookup
- Strong typed module

* Wed Nov 23 2016 Jeanne Greulich <jgreulich.simp@onyxpoint.com> - 7.0.0-0
- update requirement versions

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.0-0
- Updated to compliance_markup version 2

* Tue Nov 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Updated iptables dependency version

* Thu Nov 10 2016 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
- Removed puppetlast_support puppet_auth resource, it is unneeded

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com>, Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.0-0
- Upate to work with the latest Puppet 4 and Puppet Server
- Fixed a lot of tests and minor logic problems

* Wed Sep 28 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.7-0
- Fix Forge `haveged` dependency name

* Tue Sep 20 2016 Bryan Howard, Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.6-0
- Fixed bash redirection error in puppetagent_cron.erb

* Thu Jun 30 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.5-0
- Use_haveged is now a global catalyst.

* Tue Jun 28 2016 Nick Miller <nick.miller@onyxpoint.com> - 6.0.4-0
- Added logic to make sure java_max_memory never exceeded 12G

* Mon Jun 27 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.3-0
- Pupmod-haveged included by default to assist with entropy generation.

* Tue Jun 21 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.2-0
- Updated the calls to use_iptables to be able to be disabled globally.

* Thu May 19 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.1-0
- Made master::reports a private class

* Thu Feb 25 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 6.0.0-24
- Added compliance function support

* Wed Feb 24 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-24